Updates to scripts building GCE images:
 * add NTP server address in manifest
 * add preference for backport kernels in manifest
 * disable IPv6
 * move packages from manifest to appropriate plugins
 * move repositories from manifest to plugins
 * correctly set host name
 * generate more appropriate image file name

--- a/manifests/gce.manifest.json
+++ b/manifests/gce.manifest.json
@@ -14,37 +14,12 @@
 		"bootloader":   "grub",
 		"timezone":     "UTC",
 		"locale":       "en_US",
-		"charmap":      "UTF-8"
+		"charmap":      "UTF-8",
+		"backported_kernel": true,
+		"ntpserver":    "metadata.google.internal"
 	},
 	"packages": {
-		"mirror": "http://gce_debian_mirror.storage.googleapis.com/",
-		"sources": {
-			"main": [
-				"deb http://http.debian.net/debian {system.release} main contrib non-free",
-				"deb-src http://http.debian.net/debian {system.release} main contrib non-free"
-				],
-			"backports": [
-				"deb http://http.debian.net/debian {system.release}-backports main contrib non-free",
-				"deb-src http://http.debian.net/debian {system.release}-backports main contrib non-free"
-				],
-			"goog": [
-				"deb http://goog-repo.appspot.com/debian pigeon main"
-				]
-			},
-		"install": [
-			"google-compute-daemon",
-			"google-startup-scripts",
-			"python-gcimagebundle",
-			"gcutil",
-			"python",
-			"sudo",
-			"ntp",
-			"lsb-release",
-			"acpi-support-base",
-			"openssh-client",
-			"openssh-server",
-			"dhcpd"
-			]
+		"mirror": "http://gce_debian_mirror.storage.googleapis.com/"
 		},
 	"volume": {
 		"backing": "raw",
