--- a/manifests/gce.manifest.json
+++ b/manifests/gce.manifest.json
@@ -15,12 +15,24 @@
 		"timezone":     "UTC",
 		"locale":       "en_US",
 		"charmap":      "UTF-8",
-		"backported_kernel": true,
-		"ntpserver":    "metadata.google.internal"
 	},
 	"packages": {
-		"mirror": "http://gce_debian_mirror.storage.googleapis.com/"
-		},
+		"mirror": "http://gce_debian_mirror.storage.googleapis.com/",
+		"preferences": {
+			"backport-kernel": [
+			{
+				"package": "linux-image-* initramfs-tools",
+				"pin": "release n=wheezy-backports",
+				"pin-priority": 500
+			}
+			]
+		}
+	},
+	"plugins": {
+		"ntp": {
+			"servers": ["metadata.google.internal"]
+		}
+	},
 	"volume": {
 		"backing": "raw",
 		"partitions": {
